src/objects/Rate_List__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Type</label>
        <referenceTo>Area_Type__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeCost__c</fullName>
        <label>ChargeCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Based_On_Master__c</fullName>
        <label>Charge Based On Master</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_on_Area_Type__c</fullName>
        <label>Charge on Area Type</label>
        <picklist>
            <picklistValues>
                <fullName>Carpet Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saleable Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charged_Based_On__c</fullName>
        <formula>TEXT(Charge_Based_On_Master__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charged Based On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <formula>Rate_List_HeaderID__r.Effective_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveFrom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Till__c</fullName>
        <formula>Rate_List_HeaderID__r.Effective_Till__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Param1__c</fullName>
        <formula>Rate_List_Detail__r.Param_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Param1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param2__c</fullName>
        <formula>Rate_List_Detail__r.Param2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Param2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param3__c</fullName>
        <formula>Rate_List_Detail__r.Param_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Param3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charges</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Charges__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Charges__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit Type</label>
        <referenceTo>Project_Unit_Type__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ranges_From__c</fullName>
        <formula>Rate_List_Detail__r.Ranges_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranges From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranges_To__c</fullName>
        <formula>Rate_List_Detail__r.Ranges_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranges To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_List_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate List Detail</label>
        <referenceTo>Rate_List_Detail__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_List_HeaderID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate List Header</label>
        <referenceTo>Rate_List_Header__c</referenceTo>
        <relationshipLabel>Rate Lists</relationshipLabel>
        <relationshipName>Rate_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_List_Type__c</fullName>
        <formula>Text(Rate_List_HeaderID__r.Rate_list__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate List Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Deviation_Charge_del__c</fullName>
        <formula>Project_Unit__r.Customers__r.Special_Deviation_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Deviation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Actual Area Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Rate List</label>
    <nameField>
        <displayFormat>Rate List-{00}</displayFormat>
        <label>Rate List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SpecialDeviationOnOpportunity</fullName>
        <active>true</active>
        <description>Check the Special Deviation on Customer(Opportunity) of tagged Project Unit</description>
        <errorConditionFormula>AND(Project_Unit__r.Customers__r.Special_Deviations__c == true, ISBLANK(Project_Unit__r.Customers__r.Special_Deviation_Charge__c))</errorConditionFormula>
        <errorDisplayField>Project_Unit__c</errorDisplayField>
        <errorMessage>Please add the Special Deviation Charge or UnCheck the Special Deviation from the Customer which is Attached with this Project Unit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tag_Project_Unit_Only_Not_Project</fullName>
        <active>true</active>
        <description>Tagging Project Unit only on Project Stage(Pre-pre-Launch, Pre-Launch, Soft Launch)</description>
        <errorConditionFormula>AND(!ISPICKVAL(Project__r.Project_Stage__c, &apos;Launch&apos;), Project__c != null)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>You can map a Project only on Lauch Stage (Project).</errorMessage>
    </validationRules>
</CustomObject>